<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_device_connection"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_bluetooth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/iv_bluetooth"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_ble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_ble_disconnect"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bluetooth" />

    <EditText
        android:id="@+id/et_device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@null"
        android:background="@drawable/edit_bg_selector"
        android:hint="@string/str_hint_device_name"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_connection_status"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/bt_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg_selector"
        android:text="@string/connect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_device_name"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.55" />

    <Button
        android:id="@+id/bt_disconnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg_selector"
        android:enabled="true"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_device_name"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>