<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_bluetooth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/iv_bluetooth"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_ble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_ble_disconnect"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bluetooth" />

    <EditText
        android:id="@+id/et_device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@null"
        android:background="@drawable/edit_bg_selector"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_connection_status"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/bt_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg_selector"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_device_name"
        app:layout_constraintVertical_bias="0.765"
        app:layout_constraintWidth_percent="0.55" />

    <Button
        android:id="@+id/bt_disconnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg_selector"
        android:enabled="true"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_device_name"
        app:layout_constraintVertical_bias="0.972"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="?attr/colorOnPrimary"
        android:fadeScrollbars="false"
        android:filterTouchesWhenObscured="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bt_disconnect"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dail_web_view"
        app:layout_constraintWidth_percent="0.9" />

    <WebView
        android:id="@+id/dail_web_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_msg"
        app:layout_constraintTop_toBottomOf="@+id/iv_bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>